# moco-cli

./: .gitignore  README.md  pyproject.toml
src/moco_cli/: __init__.py  __main__.py  cli.py  const.py  transform.py
tests/: test_transform.py
